Bug 419906 - Crash when checking out repository without providing local folder
Summary: Crash when checking out repository without providing local folder
Status: RESOLVED FIXED
Alias: None
Product: kdesvn
Classification: Applications
Component: General (other bugs)
Version First Reported In: 2.1.0
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: KDESvn default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-10 07:52 UTC by vollkornkartoffeln
Modified: 2020-04-10 13:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description vollkornkartoffeln 2020-04-10 07:52:56 UTC
SUMMARY
As the title says, kdesvn crashes when checking out a repository without providing a local folder to store the files. Fresh install directly from Ubuntu repositories.

STEPS TO REPRODUCE
1. Open the program
2. click Checkout
3. Enter URL of online repository
4. Don't select target directory
5. click OK

OBSERVED RESULT
crash

EXPECTED RESULT
Tell me that I forgot to provide a target directory.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Kubuntu 19.10
KDE Plasma Version: 5.16.5
KDE Frameworks Version: 5.62.0
Qt Version: 5.12.4
Comment 1 Christian Ehrlicher 2020-04-10 11:50:26 UTC
Please provide a backtrace - I get a message box that it can't checked out to /<repo-name>
Comment 2 vollkornkartoffeln 2020-04-10 11:58:18 UTC
I can't provide a backtrace – when kdesvn crashes, a notification pops up, asking me to send a bug report. Unfortunately, under the tab „Developer Information“ it states that „The debugger has quit unexpectedly.“ N o backtrace could be generated.

But when I start kdesvn via terminal, it gives some hints about the crash:

*******
Icon theme "gnome" not found.
svn: E235000: In file '/build/subversion-r9P8_z/subversion-1.10.6/subversion/libsvn_wc/wc_db.c' line 9211: assertion failed (svn_dirent_is_absolute(local_abspath))
The X11 connection broke (error 1). Did the X11 server die?
KCrash: crashing... crashRecursionCounter = 2
KCrash: Application Name = kdesvn path = /usr/bin pid = 9682
KCrash: Arguments: /usr/bin/kdesvn 
KCrash: Attempting to start /usr/lib/x86_64-linux-gnu/libexec/drkonqi from kdeinit
sock_file=/run/user/1000/kdeinit5__0

[1]+  Stopped                 kdesvn

I hope this helps.
Comment 3 Christian Ehrlicher 2020-04-10 11:59:55 UTC
Ok, need to start kdesvn without an opened repo:

(gdb) bt
#0  0x00007fffef78b520 in raise () from /lib64/libc.so.6
#1  0x00007fffef78cb01 in abort () from /lib64/libc.so.6
#2  0x00007ffff109526e in svn_error_abort_on_malfunction () from /usr//lib64/libsvn_subr-1.so.0
#3  0x00007ffff0e0e00e in svn_wc.db_read_info () from /usr//lib64/libsvn_wc-1.so.0
#4  0x00007ffff0de3439 in svn_wc.internal_walk_children () from /usr//lib64/libsvn_wc-1.so.0
#5  0x00007ffff0dde8da in svn_wc.get_info () from /usr//lib64/libsvn_wc-1.so.0
#6  0x00007ffff1ba5759 in svn_client_info4 () from /usr//lib64/libsvn_client-1.so.0
#7  0x00007ffff1b99fbf in svn_client_info3 () from /usr//lib64/libsvn_client-1.so.0
#8  0x00007fffd6699384 in svn::Client_impl::info (this=this@entry=0x542310, _p=..., depth=depth@entry=svn::DepthEmpty, rev=..., peg_revision=..., changelists=...) at /home/chehrlic/kde/kdesvn/src/svnqt/client_status.cpp:355
#9  0x00007fffd6670fb2 in SvnThread::itemInfo (this=<optimized out>, what=..., target=..., _rev=..., _peg=...) at /home/chehrlic/kde/kdesvn/src/svnfrontend/background/svnthread.cpp:73
#10 0x00007fffd666fa0c in FillCacheThread::fillInfo (this=this@entry=0x95b390) at /home/chehrlic/kde/kdesvn/src/svnfrontend/background/fillcachethread.cpp:49
#11 0x00007fffd666fab9 in FillCacheThread::run (this=0x95b390) at /home/chehrlic/kde/kdesvn/src/svnfrontend/background/fillcachethread.cpp:58
#12 0x00007ffff04a5b2c in ?? () from /usr//lib64/libQt5Core.so.5
#13 0x00007ffff2c374f9 in start_thread () from /lib64/libpthread.so.0
#14 0x00007fffef84df2f in clone () from /lib64/libc.so.6
Comment 4 Christian Ehrlicher 2020-04-10 13:18:43 UTC
Git commit 0bf1a3a7253d1da2fac751184a3d17ed6e830956 by Christian Ehrlicher.
Committed on 10/04/2020 at 12:50.
Pushed by chehrlic into branch 'master'.

Don't crash when no local path for checkout is given

M  +4    -0    src/svnfrontend/background/fillcachethread.cpp
M  +6    -5    src/svnfrontend/fronthelpers/checkoutinfo_impl.cpp
M  +6    -0    src/svnfrontend/svnactions.cpp

https://commits.kde.org/kdesvn/0bf1a3a7253d1da2fac751184a3d17ed6e830956