Don't crash when no local path for checkout is given

BUG: 419906